--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -1,9 +1,9 @@
 
     body{
         background-color: rgb(32, 5, 133)
-            color crimson }
+            color white }
         h1,h2,h3{font-family: fantasy}
-        p{font-family: arial,times new roman, monospace, cursive }
+        p{font-family: bold,arial,times new roman, monospace, cursive }
         
 
     
