--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -4,6 +4,7 @@
             color white }
         h1,h2,h3{font-family: fantasy}
         p{font-family: bold,arial,times new roman, monospace, cursive }
+        font-size:18px;
         
 
     
